added github activity graph to cards

--- a/index.html
+++ b/index.html
@@ -22,3 +22,8 @@
   </body>
 </html>
 <!-- Do NOT change anything in this file -->
+
+<!-- <img
+          src="http://ghchart.rshah.org/lkmarcum"
+          alt="lkmarcum's Github chart"
+        /> -->
